--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hardhat": "^2.10.1"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.2",
     "@openzeppelin/contracts-upgradeable": "^4.7.2"
   }
